--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migrations:generate": "npm run typeorm -- migration:generate -n"
+    "typeorm": "typeorm-ts-node-commonjs -d src/modules/database/databaseSource.ts",
+    "migration:generate": "npm run typeorm migration:generate src/modules/database/initialTables"
   },
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
