--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "typeorm-ts-node-commonjs -d src/modules/database/databaseSource.ts",
-    "migration:generate": "npm run typeorm migration:generate src/modules/database/initialTables"
+    "migrations:generate": "npm run typeorm migration:generate src/modules/database/migrations/migration",
+    "migrations:run": "npm run typeorm migration:run",
+    "migrations:show": "npm run typeorm migration:show",
+    "migrations:revert": "npm run typeorm migration:revert",
+    "migrations:drop": "npm run typeorm migration:drop"
   },
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
