--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "migrations:run": "npm run typeorm migration:run",
     "migrations:show": "npm run typeorm migration:show",
     "migrations:revert": "npm run typeorm migration:revert",
-    "migrations:drop": "npm run typeorm migration:drop"
+    "schema:drop": "npm run typeorm schema:drop"
   },
   "dependencies": {
     "@nestjs/axios": "^0.1.0",
@@ -35,6 +35,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^6.1.2",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/chalk": "^2.2.0",
     "@types/pg": "^8.6.5",
     "chalk": "^4.1.2",
     "class-transformer": "^0.5.1",
